--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
     "style-loader": "^0.21.0",
-    "url-loader": "^1.0.1"
+    "url-loader": "^1.0.1",
+    "video-react": "^0.13.1"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
